--- a/judicial-recusal.html
+++ b/judicial-recusal.html
@@ -6,7 +6,7 @@
   <title>Judicial Recusal - Sovereign Academy</title>
   <meta name="description" content="How to request judicial recusal when you believe your judge has bias, conflict of interest, or cannot rule fairly."/>
   <link rel="manifest" href="manifest.json"/>
-  <link rel="stylesheet" href="css/style.css"/>
+  <link rel="stylesheet" href="style.css"/>
 
   <!-- Ask Sage Chatbot -->
   <script>
@@ -27,9 +27,11 @@
 
 
 <!-- Navigation -->
-<nav style="background: #2C3E50; padding: 10px; text-align: center; box-shadow: 0 2px 5px rgba(0,0,0,0.2);">
-  <a href="index.html" style="color: white; margin: 0 15px;">🏠 Home</a>
-</nav>
+<header class="site container"> 
+<div class="brand">Sovereign Academy</div> <nav class="top"> 
+<a href="index.html" class="nav-home">Home</a> </nav> 
+</header>
+
 <div class="search-container">
   <input id="smartSearch" type="text" placeholder="🔍 Search legal topics..." onkeyup="smartNavigate(this.value)" />
   <span class="search-icon">🔍</span>
