--- a/custody.html
+++ b/custody.html
@@ -128,15 +128,10 @@
   </div>
 
   <!-- Navigation -->
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="remedies.html">Remedies</a>
-    <a href="ada.html">ADA</a>
-    <a href="dss.html">DSS</a>
-    <a href="anthem-banner.html">Anthem</a>
-    <a href="ask-sage.html">⚡ Ask Sage</a>
-  </nav>
+<header class="site container"> 
+<div class="brand">Sovereign Academy</div> <nav class="top"> 
+<a href="index.html" class="nav-home">Home</a> </nav> 
+</header>
 
   <h1>👪 Custody & Family Law Help</h1>
   <p>Welcome to your nationwide support hub for custody and family law questions. Ask Sage anything — visitation, parenting plans, or emergency hearings.</p>
