--- a/missed-court.html
+++ b/missed-court.html
@@ -13,7 +13,7 @@
   <meta name="twitter:title" content="Missed Court Date? Here's What to Do - Sovereign Academy"/>
   <meta name="twitter:description" content="Step-by-step emergency guide for missed court appearances."/>
   <link rel="manifest" href="manifest.json"/>
-  <link rel="stylesheet" href="css/style.css"/>
+  <link rel="stylesheet" href="style.css"/>
   <script defer src="smart-search.js"></script>
   <script defer src="voice-search.js"></script>
   <script>
@@ -40,9 +40,10 @@
 <body>
 
 <!-- Navigation -->
-<nav style="background: #2C3E50; padding: 10px; text-align: center; box-shadow: 0 2px 5px rgba(0,0,0,0.2);">
-  <a href="index.html" style="color: white; margin: 0 15px;">🏠 Home</a>
-</nav>
+<header class="site container"> 
+<div class="brand">Sovereign Academy</div> <nav class="top"> 
+<a href="index.html" class="nav-home">Home</a> </nav> 
+</header>
 
 <!-- Smart + Voice Search -->
 <div style="text-align: center; margin: 30px 0; position: relative;">
