--- a/demand-discovery.html
+++ b/demand-discovery.html
@@ -8,7 +8,7 @@
   <meta name="keywords" content="demand discovery, evidence, cps discovery, legal documents, pro se defense, sovereign academy" />
   <meta name="theme-color" content="#2C3E50" />
   <link rel="manifest" href="manifest.json" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="styles.css" />
   <link rel="icon" href="icons/icon-192x192.png" type="image/png" />
   <link rel="apple-touch-icon" href="icons/icon-512x512.png" />
   <script defer src="smart-search.js"></script>
@@ -19,9 +19,14 @@
 <body>
 
 <!-- Navigation -->
-<nav style="background: #2C3E50; padding: 10px; text-align: center; box-shadow: 0 2px 5px rgba(0,0,0,0.2);">
-  <a href="index.html" style="color: white; margin: 0 15px;">🏠 Home</a>
-</nav>
+<header class="site container"> 
+<div class="brand">Sovereign Academy</div> <nav class="top"> 
+<a href="index.html" class="nav-home">Home</a> </nav> 
+</header>
+<header class="site container"> 
+<div class="brand">Sovereign Academy</div> <nav class="top"> 
+<a href="index.html" class="nav-home">Home</a> </nav> 
+</header>
 
 <main>
   <h1>📂 Demand Discovery</h1>
