--- a/chevron-doctrine.html
+++ b/chevron-doctrine.html
@@ -15,7 +15,7 @@
 
   <title>The End of Chevron Deference</title>
   <link rel="manifest" href="manifest.json"/>
-  <link rel="stylesheet" href="style.css"/>
+  <link rel="stylesheet" href="styles.css"/>
 
   <!-- Smart + Voice Search -->
   <script defer src="smart-search.js"></script>
