--- a/arrested.html
+++ b/arrested.html
@@ -16,7 +16,7 @@
 
   <!-- Icons & Manifest -->
   <link rel="manifest" href="manifest.json" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="styles.css" />
 
   <!-- Smart & Voice Search -->
   <script defer src="smart-search.js"></script>
