--- a/anthem.html
+++ b/anthem.html
@@ -15,7 +15,7 @@
 
   <!-- Manifest & CSS -->
   <link rel="manifest" href="manifest.json">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles.css">
 
   <!-- Smart & Voice Search -->
   <script defer src="smart-search.js"></script>
