--- a/admin-remedy.html
+++ b/admin-remedy.html
@@ -18,7 +18,7 @@
   <!-- Manifest & Icons -->
   <link rel="manifest" href="manifest.json" />
   <link rel="icon" href="icon-192.png" type="image/png" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="styles.css" />
 
   <!-- Smart + Voice -->
   <script defer src="smart-search.js"></script>
