--- a/ada-complaint.html
+++ b/ada-complaint.html
@@ -6,7 +6,7 @@
   <title>ADA Rights - Sovereign Academy</title>
   <meta name="description" content="Understand your rights under the Americans with Disabilities Act. Access national resources and defend your civil liberties with confidence." />
   <link rel="manifest" href="manifest.json">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles.css">
   <script defer src="smart-search.js"></script>
   <script defer src="voice-search.js"></script>
   <script defer src="sagebot.js"></script>
