--- a/community.html
+++ b/community.html
@@ -11,7 +11,7 @@
   <meta name="twitter:card" content="summary" />
 
   <link rel="manifest" href="manifest.json" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="styles.css" />
 
   <!-- Smart & Voice Search -->
   <script defer src="smart-search.js"></script>
