--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <link rel="manifest" href="manifest.json" />
-<link href="style.css" rel="stylesheet"/>   
+<link href="styles.css" rel="stylesheet"/>   
 <title>Courtroom Scripts for Warriors - Sovereign Academy</title>
 <meta content="Speak with power and clarity in court. Get sample scripts for objections, motions, statements, and cross-exams." name="description"/>
 <meta content="courtroom script, what to say in court, how to speak in court, motion script, objections, self-rep scripts" name="keywords"/>
@@ -18,15 +18,10 @@
 <meta content="Sample courtroom scripts for self-represented litigants who want to fight like pros." name="twitter:description"/>
 </head>
 <body>
-<nav>
-<a href="home.html">Home</a>
-<a href="about.html">About</a>
-<a href="remedies.html">Remedies</a>
-<a href="ada.html">ADA</a>
-<a href="dss.html">DSS</a>
-<a href="anthem.html">Anthem</a>
-<a href="ask-sage.html" style="font-weight: bold;">Ask Sage</a>
-</nav>
+<header class="site container"> 
+<div class="brand">Sovereign Academy</div> <nav class="top"> 
+<a href="index.html" class="nav-home">Home</a> </nav> 
+</header>
 
 <main>
 <h1>Courtroom Scripts for Warriors</h1>
