--- a/custody.html
+++ b/custody.html
@@ -15,7 +15,7 @@
   <meta name="twitter:description" content="Nationwide custody and family law help, powered by AI and real-world fire." />
 
   <link rel="manifest" href="manifest.json" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="styles.css" />
   <link rel="icon" href="icons/icon-192x192.png" type="image/png" />
   <link rel="apple-touch-icon" href="icons/icon-512x512.png" />
 
