--- a/dashboard.html
+++ b/dashboard.html
@@ -11,7 +11,7 @@
   <meta property="og:type" content="website"/>
   <meta name="theme-color" content="#2C3E50"/>
   <link rel="manifest" href="manifest.json" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="styles.css" />
   <link rel="icon" href="icons/icon-192x192.png" type="image/png" />
   <link rel="apple-touch-icon" href="icons/icon-512x512.png" />
   <script defer src="smart-search.js"></script>
@@ -21,13 +21,10 @@
 <body>
 
   <!-- Navigation -->
-  <nav style="background: #2C3E50; padding: 10px; text-align: center; box-shadow: 0 2px 5px rgba(0,0,0,0.2);">
-    <a href="home.html" style="color: white; margin: 0 15px;">🏠 Home</a>
-    <a href="about.html" style="color: white; margin: 0 15px;">About</a>
-    <a href="remedies.html" style="color: white; margin: 0 15px;">Remedies</a>
-    <a href="ask-sage.html" style="color: #00ffcc; margin: 0 15px; font-weight: bold; text-shadow: 0 0 5px #00ffcc, 0 0 10px #00ffcc;">⚡ Ask Sage</a>
-    <a href="dashboard.html" style="color: white; margin: 0 15px; font-weight: bold;">Dashboard</a>
-  </nav>
+<header class="site container"> 
+<div class="brand">Sovereign Academy</div> <nav class="top"> 
+<a href="index.html" class="nav-home">Home</a> </nav> 
+</header>
 
   <!-- Main Content -->
   <main style="max-width: 800px; margin: 40px auto; padding: 0 1rem;">
