--- a/download-hub.html
+++ b/download-hub.html
@@ -40,18 +40,11 @@
 </head>
 <body>
   <!-- Top Nav (standard, no Topics) -->
-  <nav class="top" aria-label="Primary">
-    <div class="inner container" style="padding-left:1rem;padding-right:1rem;">
-      <a href="index.html" class="brand">🦁 Sovereign Academy</a>
-      <div class="links" role="navigation">
-        <a href="court-prep.html">Court Prep</a>
-        <a href="courtroom-scripts.html">Courtroom Scripts</a>
-        <a href="llc-overview.html">Start an LLC</a>
-        <a href="trust-conversion.html">Convert to Trust</a>
-      </div>
-    </div>
-  </nav>
-
+<header class="site container"> 
+<div class="brand">Sovereign Academy</div> <nav class="top"> 
+<a href="index.html" class="nav-home">Home</a> </nav> 
+</header>
+  
   <!-- Hero -->
   <header class="hero" role="banner">
     <div class="container">
