--- a/dss.html
+++ b/dss.html
@@ -7,7 +7,7 @@
   
   <meta name="description" content="Defend yourself against CPS and DSS overreach. Know your rights.">
   <link rel="manifest" href="manifest.json"/>
-  <link rel="stylesheet" href="style.css"/> <!-- ✅ fixed path -->
+  <link rel="stylesheet" href="styles.css"/> <!-- ✅ fixed path -->
   <script defer src="smart-search.js"></script>
   <script defer src="voice-search.js"></script>
 
@@ -69,10 +69,10 @@
 
 <body>
 <!-- Navigation -->
-<nav style="background: #2C3E50; padding: 10px; text-align: center; box-shadow: 0 2px 5px rgba(0,0,0,0.2);">
-  <a href="index.html" style="color: white; margin: 0 15px;">🏠 Home</a>
-</nav>
-
+<header class="site container"> 
+<div class="brand">Sovereign Academy</div> <nav class="top"> 
+<a href="index.html" class="nav-home">Home</a> </nav> 
+</header>
 
   <h1>CPS & DSS Defense Hub</h1>
   <p>If DSS or CPS is involved in your life, Sage has your back. Learn what they’re allowed to do — and how to push back.</p>
