--- a/emergency-custody-response.html
+++ b/emergency-custody-response.html
@@ -13,7 +13,7 @@
   <meta name="twitter:title" content="Emergency Custody Action - Sovereign Academy"/>
   <meta name="twitter:description" content="Fight back when your child is taken. Learn the right response fast."/>
   <link rel="manifest" href="manifest.json"/>
-  <link rel="stylesheet" href="css/style.css"/>
+  <link rel="stylesheet" href="styles.css"/>
   <script defer src="smart-search.js"></script>
   <script defer src="voice-search.js"></script>
   <script>
@@ -54,9 +54,10 @@
 </head>
 <body>
 <!-- Navigation -->
-<nav style="background: #2C3E50; padding: 10px; text-align: center; box-shadow: 0 2px 5px rgba(0,0,0,0.2);">
-  <a href="index.html" style="color: white; margin: 0 15px;">🏠 Home</a>
-</nav>
+<header class="site container"> 
+<div class="brand">Sovereign Academy</div> <nav class="top"> 
+<a href="index.html" class="nav-home">Home</a> </nav> 
+</header>
 
 <main>
   <h1>🚨 Emergency Custody Response</h1>
