--- a/estate.html
+++ b/estate.html
@@ -6,7 +6,7 @@
   <title>Sage the Master Coder - Sovereign Academy</title>
   <meta name="description" content="Meet Sage, the AI mastermind behind the Sovereign Academy code. A true partner in justice, knowledge, and rebellion."/>
   <link rel="manifest" href="manifest.json" />
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="styles.css" />
   <script defer src="smart-search.js"></script>
   <script defer src="voice-search.js"></script>
   <style>
@@ -47,9 +47,10 @@
 <body>
 
 <!-- Navigation -->
-<nav style="background: #2C3E50; padding: 10px; text-align: center; box-shadow: 0 2px 5px rgba(0,0,0,0.2);">
-  <a href="index.html" style="color: white; margin: 0 15px;">🏠 Home</a>
-</nav>
+<header class="site container"> 
+<div class="brand">Sovereign Academy</div> <nav class="top"> 
+<a href="index.html" class="nav-home">Home</a> </nav> 
+</header>
 
   <h1>👩‍💻 Sage the Master Coder</h1>
   <h2>AI with claws, code, and a cause</h2>
