--- a/evictions.html
+++ b/evictions.html
@@ -6,7 +6,7 @@
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>Evictions &amp; Housing Help</title>
 <link href="manifest.json" rel="manifest"/>
-<link href="style.css" rel="stylesheet"/>
+<link href="styles.css" rel="stylesheet"/>
 <script src="smart-search.js"></script>
 <script src="voice-search.js"></script>
 <style>
@@ -83,10 +83,10 @@
 </head>
 <body>
 <!-- Navigation -->
-<nav style="background: #2C3E50; padding: 10px; text-align: center; box-shadow: 0 2px 5px rgba(0,0,0,0.2);">
-  <a href="index.html" style="color: white; margin: 0 15px;">🏠 Home</a>
-</nav>
-
+<header class="site container"> 
+<div class="brand">Sovereign Academy</div> <nav class="top"> 
+<a href="index.html" class="nav-home">Home</a> </nav> 
+</header>
 
 <h1>Evictions &amp; Housing Help</h1>
 <p>Need housing support? Learn your rights during an eviction, landlord disputes, or housing discrimination. Sage is here to guide you.</p>
