--- a/how-to-serve-motions.html
+++ b/how-to-serve-motions.html
@@ -14,17 +14,17 @@
   <meta name="twitter:description" content="Don’t get rejected by the court — learn how to properly serve motions and file proof."/>
 
   <link rel="manifest" href="manifest.json"/>
-  <link rel="stylesheet" href="css/style.css"/>
+  <link rel="stylesheet" href="styles.css"/>
   <script defer src="smart-search.js"></script>
   <script defer src="voice-search.js"></script>
 </head>
 <body>
 
 <!-- Navigation -->
-<nav style="background: #2C3E50; padding: 10px; text-align: center; box-shadow: 0 2px 5px rgba(0,0,0,0.2);">
-  <a href="index.html" style="color: white; margin: 0 15px;">🏠 Home</a>
-</nav>
-
+<header class="site container"> 
+<div class="brand">Sovereign Academy</div> <nav class="top"> 
+<a href="index.html" class="nav-home">Home</a> </nav> 
+</header>
 
 <main>
   <h1>📦 How to Serve Motions and Legal Documents</h1>
