--- a/judicial-recusal.html
+++ b/judicial-recusal.html
@@ -6,7 +6,7 @@
   <title>Judicial Recusal - Sovereign Academy</title>
   <meta name="description" content="How to request judicial recusal when you believe your judge has bias, conflict of interest, or cannot rule fairly."/>
   <link rel="manifest" href="manifest.json"/>
-  <link rel="stylesheet" href="style.css"/>
+  <link rel="stylesheet" href="styles.css"/>
 
   <!-- Ask Sage Chatbot -->
   <script>
