--- a/landlord-rights.html
+++ b/landlord-rights.html
@@ -6,7 +6,7 @@
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>Landlord Rights - Sovereign Academy</title>
 <link href="manifest.json" rel="manifest"/>
-<link href="css/style.css" rel="stylesheet"/>
+<link href="styles.css" rel="stylesheet"/>
 <style>
     body {
       font-family: Arial, sans-serif;
@@ -61,9 +61,10 @@
 <body>
 
 <!-- Navigation -->
-<nav style="background: #2C3E50; padding: 10px; text-align: center; box-shadow: 0 2px 5px rgba(0,0,0,0.2);">
-  <a href="index.html" style="color: white; margin: 0 15px;">🏠 Home</a>
-</nav>
+<header class="site container"> 
+<div class="brand">Sovereign Academy</div> <nav class="top"> 
+<a href="index.html" class="nav-home">Home</a> </nav> 
+</header>
 
 <div class="search-container">
 <input id="smartSearch" onkeyup="smartNavigate(this.value)" placeholder="🔍 Search legal topics..." type="text"/>
