--- a/llc-guide.html
+++ b/llc-guide.html
@@ -219,9 +219,10 @@
   </div>
 
   <!-- Nav -->
-  <nav class="topnav" aria-label="Primary">
-    <a href="index.html">🏠 Home</a>
-  </nav>
+ <header class="site container"> 
+<div class="brand">Sovereign Academy</div> <nav class="top"> 
+<a href="index.html" class="nav-home">Home</a> </nav> 
+</header>
 
   <main class="container" id="content">
 
