--- a/llc-to-trust.html
+++ b/llc-to-trust.html
@@ -98,16 +98,10 @@
 </head>
 <body>
   <!-- Top Nav -->
-  <nav class="top" aria-label="Primary">
-    <div class="inner container" style="padding-left:1rem;padding-right:1rem;">
-      <a href="index.html" class="brand">🦁 Sovereign Academy</a>
-      <div class="links" role="navigation">
-        <a href="download-hub.html">Download Hub</a>
-        <a href="llc-overview.html">Start an LLC</a>
-        <a href="#docs">Docs</a>
-      </div>
-    </div>
-  </nav>
+ <header class="site container"> 
+<div class="brand">Sovereign Academy</div> <nav class="top"> 
+<a href="index.html" class="nav-home">Home</a> </nav> 
+</header>
 
   <!-- Hero -->
   <header class="hero" role="banner">
