--- a/missed-court.html
+++ b/missed-court.html
@@ -13,7 +13,7 @@
   <meta name="twitter:title" content="Missed Court Date? Here's What to Do - Sovereign Academy"/>
   <meta name="twitter:description" content="Step-by-step emergency guide for missed court appearances."/>
   <link rel="manifest" href="manifest.json"/>
-  <link rel="stylesheet" href="style.css"/>
+  <link rel="stylesheet" href="styles.css"/>
   <script defer src="smart-search.js"></script>
   <script defer src="voice-search.js"></script>
   <script>
