--- a/my-case.html
+++ b/my-case.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Track your case details, upload documents, log deadlines, and keep private notes.">
   <meta name="keywords" content="case tracker, legal notes, court dates, upload legal documents">
   <link rel="manifest" href="manifest.json"/>
-  <link rel="stylesheet" href="css/style.css"/>
+  <link rel="stylesheet" href="styles.css"/>
   <script defer src="smart-search.js"></script>
   <script defer src="voice-search.js"></script>
   <style>
