--- a/name-change.html
+++ b/name-change.html
@@ -13,7 +13,7 @@
   <meta name="twitter:title" content="Name Change Help - Sovereign Academy"/>
   <meta name="twitter:description" content="Change your name legally with confidence. Includes court steps, templates, and national guidance."/>
   <link rel="manifest" href="manifest.json"/>
-  <link rel="stylesheet" href="css/style.css"/>
+  <link rel="stylesheet" href="styles.css"/>
   <script defer src="smart-search.js"></script>
   <script defer src="voice-search.js"></script>
   <style>
