--- a/pro-se-vs-sui-juris.html
+++ b/pro-se-vs-sui-juris.html
@@ -25,9 +25,10 @@
 <body>
 
 <!-- Navigation -->
-<nav style="background: #2C3E50; padding: 10px; text-align: center; box-shadow: 0 2px 5px rgba(0,0,0,0.2);">
-  <a href="index.html" style="color: white; margin: 0 15px;">🏠 Home</a>
-</nav>
+<header class="site container"> 
+<div class="brand">Sovereign Academy</div> <nav class="top"> 
+<a href="index.html" class="nav-home">Home</a> </nav> 
+</header>
 
 <h1>Pro Se vs. Sui Juris</h1>
 
