--- a/records.html
+++ b/records.html
@@ -6,7 +6,7 @@
   <title>Criminal Records & Rights Help - Sovereign Academy</title>
   <meta name="description" content="Clear your name and know your rights. Learn about expungement, background checks, and restoring your freedom." />
   <link rel="manifest" href="manifest.json" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="styles.css" />
   <script src="smart-search.js"></script>
   <script src="voice-search.js"></script>
   <style>
