--- a/reopen-your-case.html
+++ b/reopen-your-case.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Learn how to reopen your case when your attorney failed, new evidence surfaces, or justice wasn’t served."/>
   <meta name="keywords" content="reopen case, set aside judgment, motion for new trial, vacate order, ineffective counsel, new evidence"/>
   <link rel="manifest" href="manifest.json"/>
-  <link rel="stylesheet" href="style.css"/>
+  <link rel="stylesheet" href="styles.css"/>
   <script src="smart-search.js"></script>
   <script src="voice-search.js"></script>
 
@@ -38,9 +38,11 @@
 
 
 <!-- Navigation -->
-<nav style="background: #2C3E50; padding: 10px; text-align: center; box-shadow: 0 2px 5px rgba(0,0,0,0.2);">
-  <a href="index.html" style="color: white; margin: 0 15px;">🏠 Home</a>
-</nav>
+<header class="site container"> 
+<div class="brand">Sovereign Academy</div> <nav class="top"> 
+<a href="index.html" class="nav-home">Home</a> </nav> 
+</header>
+
 
 <main style="padding: 2rem; max-width: 900px; margin: auto;">
   <h1>Reopen Your Case</h1>
