--- a/request-for-continuance.html
+++ b/request-for-continuance.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Need more time before court? Learn how to file a request for continuance and avoid penalties or default."/>
   <meta name="keywords" content="request for continuance, court delay, motion to reschedule, legal motion, how to file continuance"/>
   <link rel="manifest" href="manifest.json"/>
-  <link rel="stylesheet" href="style.css"/>
+  <link rel="stylesheet" href="styles.css"/>
   <script defer src="smart-search.js"></script>
   <script defer src="voice-search.js"></script>
   <script defer src="sagebot.js"></script>
@@ -15,9 +15,10 @@
 <body>
 
 <!-- Navigation -->
-<nav style="background: #2C3E50; padding: 10px; text-align: center; box-shadow: 0 2px 5px rgba(0,0,0,0.2);">
-  <a href="index.html" style="color: white; margin: 0 15px;">🏠 Home</a>
-</nav>
+<header class="site container"> 
+<div class="brand">Sovereign Academy</div> <nav class="top"> 
+<a href="index.html" class="nav-home">Home</a> </nav> 
+</header>
 
 <main style="padding: 2rem; max-width: 900px; margin: auto;">
   <h1>Requesting a Court Continuance</h1>
