--- a/resources.html
+++ b/resources.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Download legal templates, affidavits, and motions to represent yourself with confidence."/>
   <meta name="keywords" content="legal templates, pro se motions, affidavits, legal forms, printable legal tools"/>
   <link rel="manifest" href="manifest.json"/>
-  <link rel="stylesheet" href="style.css"/>
+  <link rel="stylesheet" href="styles.css"/>
   <script defer src="smart-search.js"></script>
   <script defer src="voice-search.js"></script>
   <script defer src="sagebot.js"></script>
@@ -50,9 +50,10 @@
 <body>
 
 <!-- Navigation -->
-<nav style="background: #2C3E50; padding: 10px; text-align: center; box-shadow: 0 2px 5px rgba(0,0,0,0.2);">
-  <a href="index.html" style="color: white; margin: 0 15px;">🏠 Home</a>
-</nav>
+<header class="site container"> 
+<div class="brand">Sovereign Academy</div> <nav class="top"> 
+<a href="index.html" class="nav-home">Home</a> </nav> 
+</header>
 
 <main style="padding: 2rem; max-width: 900px; margin: auto;">
   <h1>📂 Legal Resources You Can Print</h1>
