--- a/smart-search.html
+++ b/smart-search.html
@@ -5,7 +5,7 @@
   <title>Smart Legal Search - Sovereign Academy</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="manifest" href="manifest.json" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="styles.css" />
   <script src="smart-search.js" defer></script>
   <script src="voice-search.js" defer></script>
   <script src="https://cdn.jsdelivr.net/gh/integrityexists/ask-sage@main/sagebot.js" defer></script>
@@ -83,9 +83,10 @@
 <body>
 
 <!-- Neon Nav -->
-<nav style="background: #2C3E50; padding: 10px; text-align: center; box-shadow: 0 2px 5px rgba(0,0,0,0.2);">
-  <a href="index.html" style="color: white; margin: 0 15px;">🏠 Home</a>
-</nav>
+<header class="site container"> 
+<div class="brand">Sovereign Academy</div> <nav class="top"> 
+<a href="index.html" class="nav-home">Home</a> </nav> 
+</header>
 
 <h2>🔍 Smart Legal Search</h2>
 <p>Search common legal topics by voice or text. Fuzzy match helps if spelling isn’t your thing 😎</p>
