--- a/sovereign.html
+++ b/sovereign.html
@@ -7,7 +7,7 @@
   <meta content="Learn what it means to be sovereign in mind, law, and life. Not anti-American — just anti-control." name="description"/>
   <meta content="sovereign citizen, self-governance, constitutional rights, freedom, legal sovereignty" name="keywords"/>
   <meta name="theme-color" content="#2c3e50"/>
-  <link href="style.css" rel="stylesheet"/>
+  <link href="styles.css" rel="stylesheet"/>
   <link rel="manifest" href="manifest.json"/>
   <script defer src="smart-search.js"></script>
   <script defer src="voice-search.js"></script>
@@ -47,9 +47,10 @@
   </style>
 </head>
 <body>
-  <nav style="background: #2C3E50; padding: 10px; text-align: center; box-shadow: 0 2px 5px rgba(0,0,0,0.2);">
-    <a href="index.html" style="color: white; margin: 0 15px;">🏠 Home</a>
-  </nav>
+ <header class="site container"> 
+<div class="brand">Sovereign Academy</div> <nav class="top"> 
+<a href="index.html" class="nav-home">Home</a> </nav> 
+</header>
 
   <main style="padding: 40px; max-width: 800px; margin: auto;">
     <h1>🇺🇸 How to Become Sovereign</h1>
