--- a/take-me-to.html
+++ b/take-me-to.html
@@ -6,7 +6,7 @@
   <title>Take Me To... - Sovereign Academy</title>
 
   <link rel="manifest" href="manifest.json"/>
-  <link rel="stylesheet" href="style.css"/>
+  <link rel="stylesheet" href="styles.css"/>
 
   <style>
     :root {
