--- a/traffic.html
+++ b/traffic.html
@@ -9,7 +9,7 @@
 
   <title>Traffic Stop Rights – Sovereign Academy</title>
   <link rel="manifest" href="manifest.json"/>
-  <link rel="stylesheet" href="style.css"/>
+  <link rel="stylesheet" href="styles.css"/>
   <link rel="icon" type="image/png" href="icons/icon-192x192.png"/>
   <link rel="apple-touch-icon" href="icons/icon-512x512.png"/>
 
