--- a/veterans.html
+++ b/veterans.html
@@ -12,7 +12,7 @@
   <meta property="og:type" content="website" />
 
   <link rel="manifest" href="manifest.json" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="styles.css" />
   <link rel="icon" href="icons/icon-192x192.png" type="image/png"/>
   <link rel="apple-touch-icon" href="icons/icon-512x512.png"/>
 
@@ -72,15 +72,10 @@
 </head>
 <body>
 
-  <nav>
-    <a href="index.html">🏠 Home</a>
-    <a href="about.html">About</a>
-    <a href="remedies.html">Remedies</a>
-    <a href="ada.html">ADA</a>
-    <a href="dss.html">DSS</a>
-    <a href="anthem.html">Anthem</a>
-    <a href="ask-sage.html">Ask Sage</a>
-  </nav>
+<header class="site container"> 
+<div class="brand">Sovereign Academy</div> <nav class="top"> 
+<a href="index.html" class="nav-home">Home</a> </nav> 
+</header>
 
   <main>
     <h1>🎖️ Veterans’ Rights & National Resources</h1>
