--- a/welcome.html
+++ b/welcome.html
@@ -9,7 +9,7 @@
   <meta name="description" content="If you've been silenced, ignored, or mistreated in court — Sovereign Academy is your weapon. Know your rights. Reclaim your power." />
   <meta name="keywords" content="legal help, AI lawyer, DSS, CPS, custody, traffic stop rights, self-representation">
   <link rel="manifest" href="manifest.json" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="styles.css" />
   <link rel="icon" href="icons/icon-192x192.png" type="image/png"/>
   <link rel="apple-touch-icon" href="icons/icon-512x512.png"/>
   <script defer src="smart-search.js"></script>
@@ -61,15 +61,10 @@
   </style>
 </head>
 <body>
-  <nav>
-    <a href="index.html">🏠 Home</a>
-    <a href="about.html">About</a>
-    <a href="remedies.html">Remedies</a>
-    <a href="ada.html">ADA</a>
-    <a href="dss.html">DSS</a>
-    <a href="anthem.html">Anthem</a>
-    <a href="ask-sage.html">Ask Sage</a>
-  </nav>
+<header class="site container"> 
+<div class="brand">Sovereign Academy</div> <nav class="top"> 
+<a href="index.html" class="nav-home">Home</a> </nav> 
+</header>
 
   <div class="welcome-container">
     <h1>Welcome to Sovereign Academy</h1>
