--- a/index.html
+++ b/index.html
@@ -29,73 +29,42 @@
       --panel: rgba(0, 0, 0, 0.5);
       --panel-hover: rgba(0, 255, 0, 0.2);
     }
-    header.site {
-      display:flex; align-items:center; justify-content:space-between;
-      padding: 14px 16px;
-    }
+    header.site { display:flex; align-items:center; justify-content:space-between; padding: 14px 16px; }
     header.site .brand { font-weight: 800; letter-spacing: .5px; }
     nav.top a.nav-home { text-decoration:none; font-weight:700; }
-    .hero { text-align:center; padding: 28px 16px 8px; }
+
+    .hero { text-align:center; padding: 24px 16px 8px; }
     .hero h1 {
       margin: 0 0 8px 0;
-      font-size: clamp(28px, 4.5vw, 54px);
+      /* smaller on purpose */
+      font-size: clamp(22px, 3.6vw, 40px);
       letter-spacing:.6px;
     }
     .sub { opacity:.9; margin-bottom: 16px; }
     .container { max-width:1120px; margin:0 auto; padding: 0 16px 40px; }
 
+    /* Sage spotlight */
+    .sage-badge { display:inline-flex; align-items:center; gap:.5rem; background: rgba(0,255,140,.08); color:#eafff2; border:1px solid rgba(0,255,140,.3); padding:.35rem .65rem; border-radius:999px; font-weight:700; font-size:.9rem; }
+    .sage-cta { display:inline-block; margin-top:.7rem; padding:.6rem .9rem; border-radius:10px; border:1px solid rgba(0,255,140,.25); background:rgba(0,255,140,.06); color:#d7ffe6; text-decoration:none; font-weight:600; }
+
     /* Ask Sage panel */
-    #ask-sage-panel {
-      background: var(--panel);
-      border-radius: 14px;
-      padding: 10px;
-      margin: 0 auto 32px; /* more breathing room */
-      box-shadow: 0 0 0 1px rgba(255,255,255,0.06) inset;
-    }
-    #ask-sage-panel iframe {
-      width:100%; height:560px; border:0; border-radius: 10px;
-      background: #000;
-    }
+    #ask-sage-panel { background: var(--panel); border-radius: 14px; padding: 14px; margin: 10px auto 32px; box-shadow: 0 0 0 1px rgba(255,255,255,0.06) inset, 0 16px 48px rgba(0,0,0,.45); }
+    #ask-sage-panel h2 { margin: 0 0 10px; text-align:center; font-size: clamp(18px, 2.8vw, 28px); }
+    #ask-sage-panel p { text-align:center; margin:0 0 12px; opacity:.9; }
+    #ask-sage-panel iframe { width:100%; height:660px; border:0; border-radius: 10px; background: #000; }
 
     /* Topics */
     #topics { margin-top: 10px; }
     #topics h2 { margin: 12px 0 16px; text-align:center; }
-    .topics-grid {
-      display:grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 12px;
-    }
-    .topics-grid a {
-      display:block;
-      padding:14px 16px;
-      border-radius:12px;
-      background: var(--panel);
-      text-decoration:none;
-      font-weight:600;
-      color:#0f0;
-      transition: background 0.2s ease, color 0.2s ease;
-      box-shadow: 0 0 0 1px rgba(255,255,255,0.06) inset;
-    }
-    .topics-grid a:hover {
-      background: var(--panel-hover);
-      color:#fff;
-    }
+    .topics-grid { display:grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 12px; }
+    .topics-grid a { display:block; padding:14px 16px; border-radius:12px; background: var(--panel); text-decoration:none; font-weight:600; color:#0f0; transition: background 0.2s ease, color 0.2s ease; box-shadow: 0 0 0 1px rgba(255,255,255,0.06) inset; }
+    .topics-grid a:hover { background: var(--panel-hover); color:#fff; }
 
-    footer.site {
-      display:flex; align-items:center; justify-content:space-between;
-      padding: 18px 16px; margin-top: 24px;
-      border-top: 1px solid rgba(255,255,255,0.08);
-    }
+    footer.site { display:flex; align-items:center; justify-content:space-between; padding: 18px 16px; margin-top: 24px; border-top: 1px solid rgba(255,255,255,0.08); }
     footer.site .mini a { text-decoration:none; margin-right:12px; }
 
     /* Disclaimer */
-    .disclaimer {
-      font-size: 0.8rem;
-      text-align: center;
-      opacity: 0.7;
-      margin: 16px auto;
-      max-width: 800px;
-    }
+    .disclaimer { font-size: 0.8rem; text-align: center; opacity: 0.7; margin: 16px auto; max-width: 800px; }
   </style>
 </head>
 
@@ -107,11 +76,15 @@
 
   <main class="container">
     <section class="hero">
+      <div class="sage-badge">⭐ Meet Sage — your 24/7 legal co‑pilot</div>
       <h1>REAL HELP. REAL TOOLS. NO LEGALESE.</h1>
       <div class="sub">Plain-language guides, courtroom scripts, and downloads that help you win.</div>
+      <a class="sage-cta" href="#ask-sage-panel">Start chatting with Sage →</a>
     </section>
 
     <section id="ask-sage-panel" aria-label="Ask Sage">
+      <h2>Ask Sage Anything</h2>
+      <p>Describe your situation and Sage will point you to the right motion, script, or checklist.</p>
       <iframe src="sage-chatbot.html" title="Ask Sage"></iframe>
     </section>
 
@@ -173,17 +146,10 @@
   </main>
 
   <footer class="site container">
-    <div class="mini">
-      <a href="index.html">Home</a>
-    </div>
-    <div class="mini">
-      <a href="privacy.html">Privacy</a>
-      <a href="terms-of-use.html">Terms</a>
-      <a href="contact.html">Contact</a>
-    </div>
+    <div class="mini"><a href="index.html">Home</a></div>
+    <div class="mini"><a href="privacy.html">Privacy</a> <a href="terms-of-use.html">Terms</a> <a href="contact.html">Contact</a></div>
   </footer>
 
-  <!-- Disclaimer -->
   <div class="disclaimer">
     Sovereign Academy and Ask Sage provide educational resources only.<br />
     We are not attorneys and this is not legal advice.<br />
@@ -191,5 +157,3 @@
   </div>
 </body>
 </html>
-index.html
-Displaying index.html.
