--- a/index.html
+++ b/index.html
@@ -1,13 +1,4 @@
-Conversation opened. 1 unread message.
-
-Skip to content
-Using Gmail with screen readers
-Conversations
-40% of 100 GB used
-Terms · Privacy · Program Policies
-Last account activity: 0 minutes ago
-Currently being used in 1 other location · Details
-<!DOCTYPE html>
+DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
